--- a/shop-list.html
+++ b/shop-list.html
@@ -5,26 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
-    /* Use Lato font for the whole page */
     @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
-
     html, body {
       font-family: 'Lato', Arial, sans-serif;
-    }
-
-    /* Reduce font size and make it professional */
-    html, body {
       height: auto;
       min-height: 100vh;
       margin: 0;
       padding: 0;
-      font-family: 'Roboto', Arial, sans-serif;
       box-sizing: border-box;
       background: transparent;
       overflow-x: hidden;
       font-size: 15px;
     }
-
     body {
       min-height: 100vh;
       width: 100vw;
@@ -34,7 +26,6 @@
       justify-content: flex-start;
       background: #f4f6f9;
     }
-
     .background {
       position: fixed;
       top: 0; left: 0;
@@ -42,8 +33,6 @@
       background: white;
       z-index: -1;
     }
-
-    /* Hexagon header background - darker colors */
     .hex-bg {
       width: 100vw;
       min-height: 200px;
@@ -65,7 +54,6 @@
       background-image: 
         repeating-linear-gradient(60deg, transparent, transparent 35px, rgba(255,255,255,0.08) 35px, rgba(255,255,255,0.08) 70px),
         repeating-linear-gradient(-60deg, transparent, transparent 35px, rgba(255,255,255,0.05) 35px, rgba(255,255,255,0.05) 70px);
-      /* animation removed */
     }
     .hex-bg::after {
       content: '';
@@ -77,7 +65,6 @@
       background: radial-gradient(circle at 30% 50%, rgba(77, 208, 225, 0.22), transparent 60%),
                   radial-gradient(circle at 70% 30%, rgba(0,170,255,0.13), transparent 50%);
     }
-
     .header-bar {
       width: 100%;
       max-width: 900px;
@@ -90,8 +77,6 @@
       z-index: 2;
       background: transparent;
     }
-
-    /* Make UNM Cafeteria title bright for dark background */
     .caf-title {
       flex: 1;
       text-align: left;
@@ -105,18 +90,16 @@
       color: transparent;
       text-shadow: 0 8px 32px rgba(0,0,0,0.22), 0 2px 4px rgba(0,0,0,0.18);
       font-family: 'Lato', Arial, sans-serif;
-      line-height: 1.25; /* increased height */
+      line-height: 1.25;
       display: flex;
       align-items: center;
       gap: 16px;
     }
-
     .caf-title span {
       font-size: 2.2rem;
       margin-right: 10px;
       filter: drop-shadow(0 2px 4px rgba(0,0,0,0.18));
     }
-
     .profile-btn {
       background: none;
       border: none;
@@ -128,7 +111,6 @@
       position: relative;
       z-index: 10;
     }
-
     .profile-btn img {
       width: 48px;
       height: 48px;
@@ -139,11 +121,9 @@
       object-fit: cover;
       transition: box-shadow 0.2s;
     }
-
     .profile-btn:active img, .profile-btn:focus img {
       box-shadow: 0 4px 16px #00aaff44;
     }
-
     .profile-menu {
       display: none;
       position: absolute;
@@ -159,41 +139,36 @@
       border: 1.5px solid #00aaff;
       animation: fadeIn 0.18s;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px);}
       to { opacity: 1; transform: translateY(0);}
     }
-
     .profile-menu button {
       width: 100%;
       background: none;
       border: none;
       padding: 14px 18px;
       font-size: 1.1rem;
-      color: #000000; /* <-- changed from #ffffff to black */
+      color: #000000;
       text-align: left;
       cursor: pointer;
       transition: background 0.15s;
       border-bottom: 1px solid #e0f7fa;
     }
-
     .profile-menu button:last-child {
       border-bottom: none;
     }
-
     .profile-menu button:hover, .profile-menu button:focus {
       background: #e0f7fa;
       color: #172b90;
     }
-
     .container {
       border-radius: 18px;
       box-shadow: 0 8px 32px rgba(0,0,0,0.3);
-      padding: 40px 24px 40px 24px; /* increased bottom padding */
+      padding: 40px 24px 40px 24px;
       max-width: 900px;
       width: 100%;
-      margin: 24px auto 32px auto; /* extra bottom margin */
+      margin: 24px auto 32px auto;
       position: relative;
       display: flex;
       flex-wrap: wrap;
@@ -202,8 +177,6 @@
       box-sizing: border-box;
       background: #fff;
     }
-
-    /* Shop card styles */
     .shop-card {
       flex: 1 1 340px;
       min-width: 180px;
@@ -224,39 +197,32 @@
       background: linear-gradient(90deg, #fff 60%, #f4f6f9 100%);
       border: 1.5px solid #005f73;
     }
-
     .shop-card.closed {
       cursor: default;
       opacity: 0.7;
       filter: grayscale(0.2);
     }
-
     .shop-card img {
       width: 100%;
       height: 120px;
       object-fit: cover;
     }
-
     .shop-card h3 {
       margin: 12px 0 6px 0;
       color: rgb(0, 0, 0);
       font-size: 1.1rem;
       font-weight: 700;
     }
-
     .shop-card p {
       color: #000000;
       padding: 0 12px 12px 12px;
       font-size: 0.95rem;
     }
-
-    /* Only animate on click/touch, not on hover */
     .shop-card:active,
     .shop-card.pressed {
       transform: scale(0.96);
       box-shadow: 0 1px 4px rgba(0,0,0,0.18);
     }
-
     .shop-closed {
       color: white;
       font-weight: bold;
@@ -267,16 +233,14 @@
       width: 90%;
       text-align: center;
     }
-
-    /* Responsive for mobile */
     @media (max-width: 700px) {
       .container {
         max-width: 100vw;
-        margin: 0 0 32px 0; /* extra bottom margin */
-        padding: 8px 4px 48px 4px; /* extra bottom padding */
+        margin: 0 0 32px 0;
+        padding: 8px 4px 48px 4px;
         gap: 12px;
         border-radius: 10px;
-        margin-top: 56px !important; /* move boxes down below header */
+        margin-top: 56px !important;
       }
       .shop-card {
         min-width: 98vw;
@@ -294,69 +258,176 @@
         letter-spacing: 1.2px;
         line-height: 1.3;
         gap: 8px;
+        margin-top: 18px; /* moved down a bit more */
       }
       .caf-title span {
         font-size: 1.3rem;
         margin-right: 4px;
       }
-
-      /* Move title and profile logo higher and more right on mobile */
       .header-bar {
         max-width: 100vw;
         padding-top: 4px;
         align-items: flex-start;
         position: relative;
       }
-      .caf-title {
-        margin-top: 12px; /* move title higher */
-        margin-left: 8px;
-        font-size: 1.7rem;
-        letter-spacing: 1.2px;
-        line-height: 1.3;
-        gap: 8px;
-      }
       .profile-btn {
         position: absolute;
-        top: 8px;      /* pull profile logo down a bit */
+        top: 18px; /* moved down a bit more */
         right: 8px;
         margin: 0;
       }
     }
+    /* Dark mode styles */
+    body.dark-mode {
+      background: #181a20 !important;
+      color: #f4f6f9 !important;
+    }
+    body.dark-mode .container {
+      background: #23262f !important;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.7);
+    }
+    body.dark-mode .shop-card {
+      background: linear-gradient(90deg, #23262f 60%, #181a20 100%) !important;
+      color: #f4f6f9 !important;
+      border: 1.5px solid #00aaff !important;
+    }
+    body.dark-mode .shop-card h3,
+    body.dark-mode .shop-card p {
+      color: #f4f6f9 !important;
+    }
+    body.dark-mode .header-bar {
+      background: transparent !important;
+    }
+    body.dark-mode .caf-title {
+      text-shadow: 0 8px 32px rgba(0,0,0,0.32), 0 2px 4px rgba(0,0,0,0.28);
+    }
+    body.dark-mode .profile-menu {
+      background: #23262f !important;
+      color: #f4f6f9 !important;
+      border: 1.5px solid #00aaff !important;
+    }
+    body.dark-mode .profile-menu button {
+      color: #f4f6f9 !important;
+      border-bottom: 1px solid #23262f !important;
+    }
+    body.dark-mode .profile-menu button:hover,
+    body.dark-mode .profile-menu button:focus {
+      background: #181a20 !important;
+      color: #00eaff !important;
+    }
+    body.dark-mode .hex-bg {
+      background: linear-gradient(135deg, #181a20 0%, #23262f 100%) !important;
+    }
+    body.dark-mode .background {
+      background: #181a20 !important;
+    }
+    #settingsModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0,0,0,0.18);
+      z-index: 999;
+    }
+    .settings-modal-content {
+      background: #fff;
+      border-radius: 18px;
+      max-width: 340px;
+      margin: 60px auto;
+      padding: 28px 24px 24px 24px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.13);
+      position: relative;
+      font-family: 'Lato', Arial, sans-serif;
+    }
+    .settings-modal-content h2 {
+      margin-top: 0;
+      font-size: 1.5rem;
+      font-weight: 900;
+      color: #222;
+      letter-spacing: 1px;
+      text-align: center;
+    }
+    .settings-modal-content label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 18px;
+      font-size: 1.08rem;
+      color: #333;
+    }
+    .settings-modal-content select,
+    .settings-modal-content input[type="checkbox"] {
+      margin-left: 16px;
+      font-size: 1rem;
+      border-radius: 8px;
+      border: 1px solid #e0e0e0;
+      padding: 6px 12px;
+      background: #f7fafd;
+      color: #222;
+      outline: none;
+    }
+    .settings-modal-content input[type="checkbox"] {
+      width: 22px;
+      height: 22px;
+      accent-color: #0077b6;
+    }
+    .settings-modal-content button {
+      display: block;
+      margin: 24px auto 0 auto;
+      padding: 10px 32px;
+      border-radius: 8px;
+      border: none;
+      background: #f7fafd;
+      color: #222;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      transition: background 0.2s;
+    }
+    .settings-modal-content button:hover {
+      background: #e0f7fa;
+    }
   </style>
 </head>
-
 <body>
   <div class="hex-bg" id="hexBg"></div>
   <div class="background"></div>
-
   <div class="header-bar">
-    <div class="caf-title"></span>UNM Cafeteria</div>
-
+    <div class="caf-title">UNM Cafeteria</div>
     <button class="profile-btn" id="profileBtn">
       <img id="profilePic" src="https://ui-avatars.com/api/?name=U&background=00aaff&color=fff&rounded=true">
     </button>
-
     <div class="profile-menu" id="profileMenu">
       <button onclick="window.location.href='student-home.html'">🏠 Home</button>
       <button onclick="window.open('mailto:absmods538@gmail.com')">💬 Feedback</button>
+      <button onclick="openSettings()">⚙️ Settings</button>
     </div>
   </div>
-
   <div class="container" id="shopList"></div>
-
+  <!-- Settings Modal -->
+  <div id="settingsModal">
+    <div class="settings-modal-content">
+      <h2>Settings</h2>
+      <label>
+        <span>Title Theme:</span>
+        <select id="titleThemeSelect">
+          <option value="default">Default</option>
+          <option value="blue">Blue</option>
+          <option value="yellow">Yellow</option>
+        </select>
+      </label>
+      <label>
+        <span>Dark Mode:</span>
+        <input type="checkbox" id="darkModeSwitch" />
+      </label>
+      <button onclick="closeSettings()">Close</button>
+    </div>
+  </div>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { 
-      getAuth, 
-      onAuthStateChanged 
-    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { 
-      getFirestore, 
-      collection, 
-      onSnapshot 
-    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-    // FIXED CONFIG (corrected typo)
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
     const firebaseConfig = {
       apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
       authDomain: "unm-caf-orders.firebaseapp.com",
@@ -366,27 +437,19 @@
       appId: "1:562096834985:web:f4bfe451e5482521e49cb8",
       measurementId: "G-J12PBDK7N1"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-
     const shopList = document.getElementById("shopList");
     const vendorsRef = collection(db, "vendors");
-
-    // AUTH GUARD
     onAuthStateChanged(auth, user => {
       if (!user) {
         alert("Please log in first.");
         window.location.href = "student-login.html";
         return;
       }
-
-      // Show user avatar
       document.getElementById("profilePic").src =
         `https://ui-avatars.com/api/?name=${user.email[0]}&background=00aaff&color=fff&rounded=true`;
-
-      // Load shops only if authenticated
       onSnapshot(vendorsRef, (snapshot) => {
         let html = "";
         snapshot.forEach(doc => {
@@ -404,7 +467,6 @@
         shopList.innerHTML = html;
       });
     });
-
     // Profile Menu Toggle
     const profileBtn = document.getElementById('profileBtn');
     const profileMenu = document.getElementById('profileMenu');
@@ -415,18 +477,14 @@
         profileMenu.style.display = 'none';
       }
     });
-
-    // Add pressed animation on touch/click
     shopList.addEventListener('touchstart', function(e) {
       const card = e.target.closest('.shop-card');
       if (card) card.classList.add('pressed');
     }, {passive: true});
-
     shopList.addEventListener('touchend', function(e) {
       const card = e.target.closest('.shop-card');
       if (card) setTimeout(() => card.classList.remove('pressed'), 120);
     }, {passive: true});
-
     shopList.addEventListener('mousedown', function(e) {
       const card = e.target.closest('.shop-card');
       if (card) card.classList.add('pressed');
@@ -435,8 +493,6 @@
       const card = e.target.closest('.shop-card');
       if (card) setTimeout(() => card.classList.remove('pressed'), 120);
     });
-
-    // Hide hex-bg when scrolling down
     window.addEventListener('scroll', function() {
       const hexBg = document.getElementById('hexBg');
       if (window.scrollY > 10) {
@@ -447,8 +503,58 @@
         hexBg.style.pointerEvents = 'auto';
       }
     });
+    // Settings modal logic
+    window.openSettings = function() {
+      document.getElementById('settingsModal').style.display = 'block';
+      document.getElementById('titleThemeSelect').value = localStorage.getItem('titleTheme') || 'default';
+      document.getElementById('darkModeSwitch').checked = localStorage.getItem('darkMode') === 'on';
+    };
+    window.closeSettings = function() {
+      document.getElementById('settingsModal').style.display = 'none';
+    };
+    document.getElementById('titleThemeSelect').addEventListener('change', function() {
+      localStorage.setItem('titleTheme', this.value);
+      applyTitleTheme();
+    });
+    function applyTitleTheme() {
+      const theme = localStorage.getItem('titleTheme') || 'default';
+      const title = document.querySelector('.caf-title');
+      if (theme === 'blue') {
+        title.style.background = 'linear-gradient(90deg, #0077b6 40%, #0097a7 100%)';
+        title.style.webkitBackgroundClip = 'text';
+        title.style.backgroundClip = 'text';
+        title.style.color = 'transparent';
+      } else if (theme === 'yellow') {
+        title.style.background = 'linear-gradient(90deg, #ffe066 60%, #ffb347 100%)';
+        title.style.webkitBackgroundClip = 'text';
+        title.style.backgroundClip = 'text';
+        title.style.color = 'transparent';
+      } else {
+        title.style.background = 'linear-gradient(90deg, #fff 40%, #ffe066 80%, #00eaff 100%)';
+        title.style.webkitBackgroundClip = 'text';
+        title.style.backgroundClip = 'text';
+        title.style.color = 'transparent';
+      }
+    }
+    applyTitleTheme();
+    document.getElementById('darkModeSwitch').addEventListener('change', function() {
+      if (this.checked) {
+        localStorage.setItem('darkMode', 'on');
+        document.body.classList.add('dark-mode');
+      } else {
+        localStorage.setItem('darkMode', 'off');
+        document.body.classList.remove('dark-mode');
+      }
+      applyDarkMode();
+    });
+    function applyDarkMode() {
+      if (localStorage.getItem('darkMode') === 'on') {
+        document.body.classList.add('dark-mode');
+      } else {
+        document.body.classList.remove('dark-mode');
+      }
+    }
+    applyDarkMode();
   </script>
-
 </body>
 </html>
-
