--- a/shop-list.html
+++ b/shop-list.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>UNM Cafeteria – Food Shops</title>
+	<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='6' y='6' width='52' height='52' rx='12' ry='12' fill='%23fff' stroke='%23f97316' stroke-width='2'/%3E%3Cpath fill='%23f97316' d='M18 14c4.2 0 7.6 3.4 7.6 7.6 0 3.2-1.8 6-4.6 7.1V46h-6V28.7c-2.8-1.1-4.6-3.9-4.6-7.1C10.4 17.4 13.8 14 18 14z'/%3E%3Cpath fill='%23ea580c' d='M34 14h4v10h2V14h4v10h2V14h4v12h-6v20h-6V26h-6z'/%3E%3C/svg%3E" />
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 	<style>
 		:root {
@@ -213,6 +214,38 @@
 		.sk-pill { height: 22px; width: 120px; border-radius: 999px; }
 		@keyframes shimmer { 0%{background-position:200% 0;} 100%{background-position:-200% 0;} }
 		.empty { grid-column: 1 / -1; text-align: center; padding: 24px 14px; background: var(--panel); border: 1px solid var(--border); border-radius: 12px; color: #475569; }
+
+		/* Dark mode overrides */
+		body.dark-mode { background: #0b1220; color: #e2e8f0; }
+		body.dark-mode .topbar,
+		body.dark-mode .hero,
+		body.dark-mode .filters,
+		body.dark-mode .filter-box { background: #0f172a; border-color: #1f2937; box-shadow: 0 4px 14px rgba(0,0,0,0.35); }
+		body.dark-mode .hero { box-shadow: 0 6px 18px rgba(0,0,0,0.3); }
+		body.dark-mode .brand,
+		body.dark-mode .hero h1 { color: #fbbf24; }
+		body.dark-mode .profile { background: #0b1325; border-color: #1f2937; box-shadow: 0 4px 12px rgba(0,0,0,0.35); }
+		body.dark-mode .profile .profile-badge { background: #f97316; color: #ffffff; }
+		body.dark-mode .input,
+		body.dark-mode select { background: #0b1325; border-color: #1f2937; color: #e2e8f0; box-shadow: 0 6px 16px rgba(0,0,0,0.35); }
+		body.dark-mode .input::placeholder { color: #94a3b8; }
+		body.dark-mode select option { background: #0b1325; color: #e2e8f0; }
+		body.dark-mode .input:focus,
+		body.dark-mode select:focus { border-color: #f97316; box-shadow: 0 0 0 6px rgba(249,115,22,0.22); }
+		body.dark-mode .grid { gap: 14px; }
+		body.dark-mode .card { background: #0f172a; border-color: #1f2937; box-shadow: 0 10px 28px rgba(0,0,0,0.35); }
+		body.dark-mode .card h3 { color: #e2e8f0; }
+		body.dark-mode .card p { color: #cbd5e1; }
+		body.dark-mode .status.open { background: rgba(34,197,94,0.18); color: #34d399; border-color: rgba(52,211,153,0.4); }
+		body.dark-mode .status.closed { background: rgba(239,68,68,0.18); color: #fca5a5; border-color: rgba(248,113,113,0.35); }
+		body.dark-mode .cta { background: #f97316; border-color: #fb923c; color: #ffffff; box-shadow: 0 8px 18px rgba(249,115,22,0.25); }
+		body.dark-mode .fav-btn { background: #0b1325; border-color: #1f2937; box-shadow: 0 8px 18px rgba(0,0,0,0.35); }
+		body.dark-mode .fav-btn svg { stroke: #cbd5e1; }
+		body.dark-mode .fav-btn.fav svg { stroke: #ef4444; fill: #ef4444; }
+		body.dark-mode .empty { background: #0f172a; border-color: #1f2937; color: #cbd5e1; }
+		body.dark-mode .page-loader { background: rgba(5,10,18,0.75); color: #e2e8f0; }
+		body.dark-mode .page-loader .spinner { border-color: rgba(255,255,255,0.25); border-top-color: #f97316; box-shadow: 0 8px 20px rgba(0,0,0,0.35); }
+		body.dark-mode .dot-loader span { background: #f97316; }
 		@media (max-width: 880px) { .hero { grid-template-columns: 1fr; align-items: start; } .actions { width: auto; } .filters { position: static; } }
 		@media (max-width: 620px) {
 			.grid { grid-template-columns: 1fr; }
