--- a/menu-note.html
+++ b/menu-note.html
@@ -4,104 +4,150 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Item Note</title>
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='6' y='6' width='52' height='52' rx='12' ry='12' fill='%23fff' stroke='%23f97316' stroke-width='2'/%3E%3Cpath fill='%23f97316' d='M18 14c4.2 0 7.6 3.4 7.6 7.6 0 3.2-1.8 6-4.6 7.1V46h-6V28.7c-2.8-1.1-4.6-3.9-4.6-7.1C10.4 17.4 13.8 14 18 14z'/%3E%3Cpath fill='%23ea580c' d='M34 14h4v10h2V14h4v10h2V14h4v12h-6v20h-6V26h-6z'/%3E%3C/svg%3E" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet" />
   <style>
-    :root { --primary:#005f73; --text:#111; --muted:#6b7280; }
+    :root {
+      --orange: #f97316;
+      --orange-dark: #ea580c;
+      --black: #0f172a;
+      --gray: #f8fafc;
+      --border: #e2e8f0;
+      --muted: #475569;
+    }
     * { box-sizing: border-box; }
     html, body { font-size: 15px; }
     body {
-      margin: 0; font-family: "Lato", Arial, sans-serif; background:#f8f9fb; color: var(--text);
-      padding-bottom: 90px;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #ffffff;
+      color: var(--black);
+      padding-bottom: 98px;
     }
     .hero {
-      position: relative; width: 100%; height: 200px; overflow: hidden; background:#ddd;
+      position: relative;
+      width: 100%;
+      height: 210px;
+      overflow: hidden;
+      background: linear-gradient(135deg, rgba(249,115,22,0.12), rgba(234,88,12,0.12));
+      border-bottom: 1px solid var(--border);
     }
-    .hero img { width: 100%; height: 100%; object-fit: cover; display:block; }
+    .hero img {
+      width: 100%; height: 100%; object-fit: cover; display: block;
+      filter: saturate(1.05);
+    }
     .back-btn {
-      position: absolute; top: 12px; left: 12px;
-      background: rgba(0,0,0,0.55); color: #fff; border: none; border-radius: 10px;
-      width: 40px; height: 40px; font-size: 20px; font-weight: 700;
-      display:flex; align-items:center; justify-content:center;
-      padding: 0;
-      line-height: 1;
+      position: absolute; top: 14px; left: 14px;
+      background: var(--gray); color: var(--black);
+      border: 1px solid var(--border); border-radius: 12px;
+      padding: 10px 12px; height: 42px;
+      font-size: 16px; font-weight: 800;
+      display: inline-flex; align-items: center; justify-content: center; gap: 8px;
       cursor: pointer;
-      backdrop-filter: blur(4px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      transition: background 0.16s ease, transform 0.16s ease;
     }
-    .content { padding: 16px; max-width: 640px; margin: 0 auto; }
-    .item-header { display:flex; align-items:flex-start; justify-content:space-between; gap:12px; }
-    .item-header h1 { margin:0; font-size: 1.05rem; line-height:1.3; }
-    .item-header .price { font-weight: 800; font-size: 1rem; }
+    .back-btn:hover { background: #fff7ed; }
+    .back-btn:active { transform: translateY(1px); }
+
+    .content {
+      padding: 18px 16px;
+      max-width: 820px;
+      margin: 0 auto;
+    }
+    .card {
+      background: #ffffff;
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      box-shadow: 0 8px 22px rgba(0,0,0,0.06);
+      padding: 16px;
+    }
+    .item-header { display:flex; align-items:flex-start; justify-content:space-between; gap:12px; margin-bottom: 12px; }
+    .item-header h1 { margin:0; font-size: 1.12rem; line-height:1.3; color: var(--black); }
+    .item-header .price { font-weight: 800; font-size: 1rem; color: var(--black); }
     .item-header .category { margin:2px 0 0; color: var(--muted); font-size: 0.9rem; }
-    .note-section { margin-top: 18px; }
-    .section-title { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; font-weight:700; font-size: 0.95rem; }
-    .chip { background:#f1f5f9; color:#475569; border-radius:14px; padding:4px 10px; font-size: 0.85rem; }
+    .note-section { margin-top: 14px; }
+    .section-title { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; font-weight:800; font-size: 0.96rem; color: var(--black); }
+    .chip { background: var(--gray); color: var(--muted); border-radius:14px; padding:4px 10px; font-size: 0.85rem; border: 1px solid var(--border); }
     textarea {
-      width:100%; min-height:120px; border:1.5px solid #d9dfe7; border-radius: 12px;
+      width:100%; min-height:120px; border:1.5px solid var(--border); border-radius: 12px;
       padding:12px; font-size:0.95rem; resize: vertical; outline:none; background:#fff;
+      transition: border-color 0.14s ease, box-shadow 0.14s ease;
     }
-    textarea:focus { border-color: var(--primary); box-shadow:0 0 0 3px #00a56f22; }
+    textarea:focus { border-color: var(--orange); box-shadow: 0 0 0 3px rgba(249,115,22,0.22); }
     .qty-section {
-      margin: 22px 0; display:flex; align-items:center; justify-content:center; gap:28px; font-size:1rem;
+      margin: 22px 0 8px; display:flex; align-items:center; justify-content:center; gap:28px; font-size:1rem;
     }
     .qty-btn {
-      width: 40px; height: 40px; border-radius: 50%; border: none; cursor: pointer;
-      display:flex; align-items:center; justify-content:center; font-size:20px; font-weight:700;
-      color:#ffffff; background: #005f73; transition: transform 0.1s;
+      width: 42px; height: 42px; border-radius: 50%; border: none; cursor: pointer;
+      display:flex; align-items:center; justify-content:center; font-size:20px; font-weight:800;
+      color:#ffffff; background: var(--orange);
+      transition: transform 0.1s, background 0.14s ease;
+      box-shadow: 0 8px 18px rgba(249,115,22,0.28);
     }
-    .qty-btn:active { transform: scale(0.95); }
-    #qty-value { min-width: 32px; text-align:center; font-weight: 700; }
+    .qty-btn:hover { background: var(--orange-dark); }
+    .qty-btn:active { transform: scale(0.96); }
+    #qty-value { min-width: 32px; text-align:center; font-weight: 800; color: var(--black); }
     .add-cart {
       position: fixed; left:0; right:0; bottom:0;
       padding: 14px 16px calc(14px + env(safe-area-inset-bottom));
-      background:#fff; box-shadow: 0 -6px 24px rgba(0,0,0,0.12);
+      background:#ffffff; box-shadow: 0 -10px 28px rgba(0,0,0,0.12);
       display:flex; justify-content:center;
+      border-top: 1px solid var(--border);
     }
     .add-cart button {
-      width:100%; max-width: 540px; border:none; border-radius: 12px;
-      background: linear-gradient(90deg,#005f73,#005f73); color:#fff;
-      font-size: 1rem; font-weight: 800; padding: 12px 14px; cursor: pointer;
-      box-shadow: 0 10px 28px rgba(0,165,111,0.28);
+      width:100%; max-width: 640px; border:none; border-radius: 12px;
+      background: var(--orange); color:#fff;
+      font-size: 1rem; font-weight: 800; padding: 14px 16px; cursor: pointer;
+      box-shadow: 0 12px 28px rgba(249,115,22,0.25);
+      transition: background 0.14s ease, transform 0.12s ease;
     }
+    .add-cart button:hover { background: var(--orange-dark); }
+    .add-cart button:active { transform: scale(0.99); }
     @media (min-width: 768px) {
       .hero { height: 240px; border-bottom-left-radius: 14px; border-bottom-right-radius: 14px; }
+      .card { padding: 18px 18px 22px; }
     }
 
     /* Dark mode overrides */
     body.dark-mode {
-      background:#0f1116;
-      color:#e5e7eb;
+      background:#0b1220;
+      color:#e2e8f0;
     }
-    body.dark-mode .hero { background:#111; }
+    body.dark-mode .hero {
+      background: linear-gradient(135deg, rgba(249,115,22,0.16), rgba(234,88,12,0.12));
+      border-color: #1e293b;
+    }
     body.dark-mode .back-btn {
-      background:rgba(0,0,0,0.65);
-      color:#f8fafc;
+      background:#111827; color:#e2e8f0; border-color:#1e293b;
+      box-shadow: 0 10px 24px rgba(0,0,0,0.4);
     }
-    body.dark-mode .content { color:#e5e7eb; }
+    body.dark-mode .card {
+      background:#0f172a;
+      border-color:#1e293b;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.35);
+    }
     body.dark-mode .item-header h1,
-    body.dark-mode .item-header .price { color:#e5e7eb; }
-    body.dark-mode .item-header .category { color:#94a3b8; }
-    body.dark-mode .section-title { color:#e5e7eb; }
+    body.dark-mode .item-header .price { color:#fbbf24; }
+    body.dark-mode .item-header .category,
+    body.dark-mode .section-title,
+    body.dark-mode #qty-value { color:#e2e8f0; }
     body.dark-mode .chip {
-      background:#1f2937;
+      background:#111827;
       color:#cbd5e1;
+      border-color:#1e293b;
     }
     body.dark-mode textarea {
-      background:#1a1d24;
-      color:#e5e7eb;
-      border:1.5px solid #2c3340;
+      background:#0f172a;
+      color:#e2e8f0;
+      border:1.5px solid #1e293b;
     }
     body.dark-mode textarea::placeholder { color:#94a3b8; }
-    body.dark-mode .qty-btn {
-      background:#0077b6;
-      color:#fff;
-    }
-    body.dark-mode .add-cart {
-      background:#111827;
-      box-shadow:0 -6px 24px rgba(0,0,0,0.35);
-    }
-    body.dark-mode .add-cart button {
-      background: linear-gradient(90deg,#0077b6,#00a8e8);
-      box-shadow:0 10px 28px rgba(0,119,182,0.35);
-    }
+    body.dark-mode .qty-btn { background:#f59e0b; color:#0f172a; box-shadow: 0 8px 20px rgba(249,115,22,0.28); }
+    body.dark-mode .add-cart { background:#0f172a; border-color:#1e293b; box-shadow:0 -10px 30px rgba(0,0,0,0.45); }
+    body.dark-mode .add-cart button { background:#f59e0b; color:#0f172a; box-shadow:0 12px 28px rgba(249,115,22,0.35); }
   </style>
 </head>
 <body>
@@ -111,27 +157,29 @@
   </div>
 
   <main class="content">
-    <div class="item-header">
-      <div>
-        <h1 id="item-name">Item</h1>
-        <div class="category" id="item-category"></div>
+    <div class="card">
+      <div class="item-header">
+        <div>
+          <h1 id="item-name">Item</h1>
+          <div class="category" id="item-category"></div>
+        </div>
+        <div class="price" id="item-price">RM 0.00</div>
       </div>
-      <div class="price" id="item-price">RM 0.00</div>
+
+      <section class="note-section">
+        <div class="section-title">
+          <span>Note to restaurant</span>
+          <span class="chip">Optional</span>
+        </div>
+        <textarea id="note-input" placeholder="Add note! eg. No onions, extra spicy"></textarea>
+      </section>
+
+      <section class="qty-section">
+        <button class="qty-btn" id="qty-minus">−</button>
+        <span id="qty-value">1</span>
+        <button class="qty-btn" id="qty-plus">+</button>
+      </section>
     </div>
-
-    <section class="note-section">
-      <div class="section-title">
-        <span>Note to restaurant</span>
-        <span class="chip">Optional</span>
-      </div>
-      <textarea id="note-input" placeholder="Add note! eg. No onions, extra spicy"></textarea>
-    </section>
-
-    <section class="qty-section">
-      <button class="qty-btn" id="qty-minus">−</button>
-      <span id="qty-value">1</span>
-      <button class="qty-btn" id="qty-plus">+</button>
-    </section>
   </main>
 
   <div class="add-cart">
@@ -141,13 +189,14 @@
   <script>
     // Fetch data from query parameters
     const params = new URLSearchParams(location.search);
+    const id = params.get("id") || `item_${Date.now()}`;
     const name = params.get("name") || "Item";
     const price = parseFloat(params.get("price") || "0");
     const category = params.get("category") || "";
     const img = params.get("img") || "https://via.placeholder.com/800x400?text=Food+image";
     const returnUrl = params.get("returnUrl") || "menu.html";
     const vendorId = params.get("vendor") || "";
-    const cartKey = vendorId ? `cart_${vendorId}` : "cart";
+    const cartKey = vendorId ? `cart_vendor_${vendorId}` : "cart_vendor_unknown";
     // Populate UI
     document.getElementById("item-name").textContent = name;
     document.getElementById("item-category").textContent = category;
@@ -162,7 +211,16 @@
     document.getElementById("add-cart-btn").onclick = () => {
       const note = document.getElementById("note-input").value.trim();
       const cart = JSON.parse(localStorage.getItem(cartKey) || "[]");
-      cart.push({ name, price: Number(price), category, notes: note, qty, imageURL: img });
+      cart.push({
+        id,
+        name,
+        price: Number(price),
+        category,
+        notes: note,
+        qty,
+        image: img,
+        imageURL: img
+      });
       localStorage.setItem(cartKey, JSON.stringify(cart));
       window.location.href = returnUrl;
     };
