--- a/shop-list.html
+++ b/shop-list.html
@@ -154,12 +154,19 @@
 			overflow: hidden;
 			box-shadow: 0 6px 16px rgba(0,0,0,0.06);
 			display: grid;
-			grid-template-rows: 160px auto;
+			grid-template-rows: auto 1fr;
 			min-height: 300px;
 			transition: transform 0.12s ease, box-shadow 0.18s ease, border-color 0.18s ease;
 		}
 		.card:hover { transform: translateY(-3px); border-color: var(--orange); box-shadow: 0 10px 26px rgba(0,0,0,0.1); }
-		.card img { width: 100%; height: 100%; object-fit: cover; display: block; }
+		.card img {
+			width: 100%;
+			height: auto;
+			aspect-ratio: 16 / 9;
+			object-fit: cover;
+			display: block;
+			background: #f8fafc;
+		}
 		.card-body { padding: 14px; display: grid; gap: 10px; }
 		.card-head { display: flex; gap: 10px; align-items: center; }
 		.card h3 { margin: 0; font-size: 1.08rem; letter-spacing: 0.2px; flex: 1; color: var(--black); }
@@ -249,7 +256,7 @@
 		@media (max-width: 880px) { .hero { grid-template-columns: 1fr; align-items: start; } .actions { width: auto; } .filters { position: static; } }
 		@media (max-width: 620px) {
 			.grid { grid-template-columns: 1fr; }
-			.card { grid-template-rows: 150px auto; }
+				.card { grid-template-rows: auto 1fr; }
 			.filter-row { flex-direction: column; align-items: flex-start; }
 			.filter-box { width: 100%; }
 		}
